# HW_21.2

./: Catalog.html  Categories.html  Contacts.html  catalog.html  category1.html  contacts.html  home.html  main.py  pyproject.toml
