[tool.poetry]
name = "hw-21-2"
version = "0.1.0"
description = ""
authors = ["Lana Virina <lana.virina@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_21"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
